--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ strong {
   text-transform: uppercase;
 }
 
-.panel .player .total-points {
+.panel .player .total-score {
   color: #c7365f;
   font-size: 8rem;
 }
@@ -233,7 +233,7 @@ strong {
   text-transform: uppercase;
 }
 
-.panel .player div .points {
+.panel .player div .score {
   font-size: 3.6rem;
 }
 
