--- a/style.css
+++ b/style.css
@@ -248,6 +248,15 @@ strong {
   opacity: 1;
 }
 
+.panel .player--winner {
+  background-color: #2f2f2f;
+}
+
+.panel .player--winner h2 {
+  font-weight: 700;
+  color: #c7365f;
+}
+
 @media (max-width: 64em) {
   html {
     font-size: 56%;
