--- a/style.css
+++ b/style.css
@@ -115,6 +115,76 @@ strong {
   visibility: hidden;
 }
 
+.modal {
+  background-color: #ededed;
+  border-radius: 12px;
+  box-shadow: 0 2.4rem 2.4rem 0 rgba(0, 0, 0, 0.1);
+  padding: 3.2rem 4.8rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 42rem;
+  z-index: 10;
+}
+
+.modal div {
+  align-items: center;
+  justify-content: space-between;
+}
+
+.modal div h1 {
+  letter-spacing: -0.5px;
+  font-size: 3.2rem;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.modal div button {
+  background-color: transparent;
+  border: none;
+  color: inherit;
+  cursor: pointer;
+  font-family: inherit;
+  text-transform: uppercase;
+  font-size: 1.8rem;
+}
+
+.modal div button:hover {
+  color: red;
+  font-weight: 700;
+}
+
+.modal ul {
+  list-style: decimal;
+  padding: 0 2.4rem;
+}
+
+.modal ul li {
+  font-size: 1.8rem;
+  line-height: 1.5;
+}
+
+.modal ul li:not(:last-child) {
+  margin-bottom: 1.8rem;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9;
+}
+
+.overlay .hidden,
+.modal .hidden {
+  display: none;
+}
+
 .absolute {
   position: absolute;
   top: 50%;
@@ -169,6 +239,10 @@ strong {
 .controls-container .image-container .image {
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
   width: 100%;
+}
+
+.controls-container .image-container .image .hidden {
+  visibility: hidden;
 }
 
 .controls-container div:last-child {
